--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -11,7 +11,7 @@
 }
 
 input[type=file]::file-selector-button {
-    border: 2px solid #c8d1ce;
+    border: 2px solid black;
     /* padding: .2em .4em; */
     border-radius: .2em;
     background-color: transparent;
@@ -20,7 +20,7 @@ input[type=file]::file-selector-button {
 }
 
 .file-input input {
-    border: 1px solid #c8d1ce;
+    border: 1px solid black;
     border-radius: .2em;
     width: 100%;
     /* padding: 5px 0px; */
